# synth-bank-es

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
configs/: data_config.yaml  model_config.yaml
data/processed/: combined_base.parquet  epa_processed.parquet  epf_processed.parquet
notebooks/02_data_processing/: 01_eda_N_50K.ipynb  credit_scoring.ipynb
src/data/processing/: process_data.py
src/evaluation/: statistical_tests.py
src/synthetic/generators/: client_generator.py  generate_synthetic.py
